feat: enhance OCR configuration with dynamic hardware settings and update inference engine usage

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,9 @@ file:
   storage:
     windows-path: D:/home/images/
     linux-path: /var/tmp/images/
+
+inference:
+  engine:
+    hardware:
+      cpu: 8
+      gpu: -1
