--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,30 @@
             <version>${rapidocr.version}</version>
         </dependency>
 
+        <!--<dependency>
+            <groupId>io.github.hzkitty</groupId>
+            <artifactId>rapidocr4j</artifactId>
+            <version>1.0.2</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>io.github.hzkitty</groupId>
+            <artifactId>rapidocr4j</artifactId>
+            <version>1.0.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.microsoft.onnxruntime</groupId>
+                    <artifactId>onnxruntime</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- 1.18.0 support CUDA 12.x -->
+        <dependency>
+            <groupId>com.microsoft.onnxruntime</groupId>
+            <artifactId>onnxruntime_gpu</artifactId>
+            <version>1.18.0</version>
+        </dependency>
     </dependencies>
 
     <!--  打包命令：mvn clean package -P linux-x86_64 -Dlinux-build  -->
